--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,14 @@
     <body>
         <h1><%= title %></h1>
         <form method="GET" action="/search">
+            <label for="name"> Name: </label>
+            <input type="text" id="name" name="name">
+            <label for="min_date"> Min Date: </label>
+            <input type="number" id="min_date" name="min_date" step="1">
+            <label for="max_date"> Max Date: </label>
+            <input type="number" id="max_date" name="max_date" step="1">
             <button type="submit">Submit</button>
+<!--            figure out how filter add add categories, maybe put it on the side to filter -->
         </form>
         <ol>
 
