--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,12 +12,14 @@
             <input type="number" id="min_date" name="min_date" step="1">
             <label for="max_date"> Max Date: </label>
             <input type="number" id="max_date" name="max_date" step="1">
-            <button type="submit">Submit</button>
+            <button type="submit">Search</button>
 <!--            figure out how filter add add categories, maybe put it on the side to filter -->
         </form>
-        <ol>
-
-        </ol>
+        <div>
+            <% emojis.forEach(emoji => {%>
+                <div> <%- emoji.encoding %></div>
+            <% }) %>
+        </div>
         <form method="GET" action="/new">
             <button type="submit"> New </button>
         </form>
