Write query function to search based on likeness of name, range between dates and by category

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,9 @@
             <label for="name"> Name: </label>
             <input type="text" id="name" name="name">
             <label for="min_date"> Min Date: </label>
-            <input type="number" id="min_date" name="min_date" step="1">
+            <input type="date" id="min_date" name="min_date">
             <label for="max_date"> Max Date: </label>
-            <input type="number" id="max_date" name="max_date" step="1">
+            <input type="date" id="max_date" name="max_date">
             <button type="submit">Search</button>
 <!--            figure out how filter add add categories, maybe put it on the side to filter -->
         </form>
