--- a/views/emoji_info.ejs
+++ b/views/emoji_info.ejs
@@ -12,7 +12,7 @@
                     <%= emoji.emoji_name %>
                     <button type="button"> Edit </button>
                 </p>
-                <form action="/edit/<%= emoji.emoji_id %>" method="POST">
+                <form action="/info/<%= emoji.emoji_id %>/edit/name/" method="POST">
                     <label for="name"> New Name: </label>
                     <input type="text" id="name" name="name">
                     <div>
@@ -28,6 +28,9 @@
                         <button type="submit"> Add Tag </button>
                     </form>
                     <% categories.forEach(category => { %>
+<!--                    todo: figure out if a link element is triggerable
+by pressing anywhere in the elment or just the text-->
+<!--                    todo: add deletion button -->
                         <a href="/category/<%=category.category_id%>"><%= category.category_name %></a>
                     <% }) %>
                 </div>
