--- a/views/emoji_info.ejs
+++ b/views/emoji_info.ejs
@@ -22,7 +22,7 @@
                 </form>
                 <%= emoji.date_added %>
                 <div>
-                    <form action="/info/<%= emoji.emoji_id %>" method="POST">
+                    <form action="/info/<%= emoji.emoji_id %>/edit/category/add" method="POST">
                         <label for="category"></label>
                         <input type="text" id="category" name="category">
                         <button type="submit"> Add Tag </button>
