All ability to remove categories from emoji and refactor urls inside category to use emoji instead of info url segment

--- a/views/category.ejs
+++ b/views/category.ejs
@@ -6,7 +6,7 @@
     <body>
         <h1><%= title %></h1>
         <% emojis.forEach(emoji => {%>
-            <a href="/info/<%= emoji.emoji_id %>"><%= emoji.encoding%></a>
+            <a href="/emoji/<%= emoji.emoji_id %>"><%= emoji.encoding%></a>
         <% }) %>
     </body>
 </html>
