Fix bug in code that returned all eomjis from results of search, instead of all distinct emojis

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
             <select id="category" name="category">
                 <option value=""> None </option>
                 <% categories.forEach(category => { %>
-                    <option value="<%= category.category_id %>"><%= category %></option>
+                    <option value="<%= category.category_id %>"><%= category.category_name %></option>
                 <% }) %>
             </select>
             <label for="min_date"> Min Date: </label>
