--- a/views/category.ejs
+++ b/views/category.ejs
@@ -5,6 +5,21 @@
     </head>
     <body>
         <h1><%= title %></h1>
+        <form action="/category/<%= category_id %>" method="GET">
+            <% categories.forEach(category => { %>
+                <label>
+                    <input
+                            type="checkbox"
+                            name="category_id"
+                            value="<%= category.category_id%>"
+                            <%= to_check.includes(parseInt(category.category_id)) ? "checked" : ""%>
+                    >
+                    <%= category.category_name %>
+                </label>
+            <% }) %>
+            <button type="submit">Submit</button>
+        </form>
+
         <% emojis.forEach(emoji => {%>
             <a href="/emoji/<%= emoji.emoji_id %>"><%= emoji.encoding%></a>
         <% }) %>
