--- a/views/addEmoji.ejs
+++ b/views/addEmoji.ejs
@@ -7,9 +7,10 @@
         <h1><%= title %></h1>
         <form action="/new" method="POST">
             <label for="name"> Name: </label>
-            <input type="text" id="name" name="name">
+            <input type="text" id="name" name="name" required>
+<!--            todo: add check that it is an emoji that is passed through-->
             <label for="emoji"> Emoji: </label>
-            <input type="text" id="emoji" name="emoji">
+            <input type="text" id="emoji" name="emoji" required>
             <button type="submit">Submit</button>
         </form>
     </body>
