--- a/views/emoji.ejs
+++ b/views/emoji.ejs
@@ -24,7 +24,7 @@
                 <div>
                     <form action="/emoji/<%= emoji.emoji_id %>/edit/category/add" method="POST">
                         <label for="category"></label>
-                        <input type="text" id="category" name="category">
+                        <input type="text" id="category" name="category" required>
                         <button type="submit"> Add Tag </button>
                     </form>
                     <% categories.forEach(category => { %>
