Change category page name to the name of the category selected to make it clearer

--- a/views/category.ejs
+++ b/views/category.ejs
@@ -22,7 +22,7 @@
         <% emojis.forEach(emoji => {%>
             <a href="/emoji/<%= emoji.emoji_id %>"><%= emoji.encoding%></a>
         <% }) %>
-        <form action="/category/<%= category.category_id %>/delete" method="POST">
+        <form action="/category/<%= category_id %>/delete" method="POST">
             <button type="submit"> Delete This Category From All Emojis </button>
         </form>
     </body>
