--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,53 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
-    color: #333;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    font-family: Helvetica;
+    gap: 20px;
+    padding: 20px;
+}
+
+a {
+    text-decoration: none;
+    font-size: 100px;
+    padding: 20px;
+    background-color: palevioletred;
+    text-align: center;
+    border-radius: 25px;
 }
 
 h1 {
-    color: #4CAF50;
     text-align: center;
+}
+
+form#search {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    font-weight: bold;
+}
+
+div {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    gap: 20px;
+    padding: 0 20px 0 20px;
+    width: 100%
+}
+
+form#new {
+    display: flex;
+    justify-content: center;
+}
+
+form#new button {
+    font-size: 25px;
+    padding: 0 25px 0 25px;
 }
