Add basic css to emoji.ejs and make name required to update name, and add js functionality to edit button and form

--- a/css/emoji.css
+++ b/css/emoji.css
@@ -30,6 +30,10 @@ div#info {
     gap: 10px;
 }
 
+form#edit_form {
+    display: none;
+}
+
 div#tags {
     width: 50%;
     display: flex;
@@ -40,3 +44,4 @@ div#tags {
 div#tag {
     display: flex;
 }
+
