--- a/css/index.css
+++ b/css/index.css
@@ -33,11 +33,10 @@ form#search {
     font-weight: bold;
 }
 
-/* todo: fix when adding more to go next row*/
 div {
     display: grid;
-    grid-auto-flow: column;
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+    grid-auto-flow: row;
+    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
     padding: 0 20px 0 20px;
     width: 100%
